--- a/simplepdfviewer/src/main/res/layout/list_item_default.xml
+++ b/simplepdfviewer/src/main/res/layout/list_item_default.xml
@@ -3,4 +3,5 @@
     android:id="@+id/pdfImg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:contentDescription="@null" />
